# kokkos-trial-playground

./: CMakeLists.txt  index_converter.hpp  kokkos_try.cpp  linked_cells.hpp  linked_cells.hpp.bak  linkedcell_benchmarks.cpp  linkedcell_experiments.cpp  linkedcell_experiments_parallel.cpp  linkedcell_tester.cpp  molecule.hpp  molecule_container.hpp  moleculecontainer_parallel.hpp  moleculecontainer_parallel_benching.hpp  subview_playground.cpp
